data/exec-logs/naive/rtatman_did-it-rain-in-seattle-19482017/will-it-rain-in-seattle.exec.log
  File "will-it-rain-in-seattle.py", line 26
    imputer=scale(missing_values='NaN', strategy='mean', with_mean=0,with_mean=True,with_std=True,copy=True,axis=True)
                                                                    ^
SyntaxError: keyword argument repeated
